Now scroll functions implemented when mouse is kept over next/prev buttons and on rotate buttons. Extreme fast image navigation and rotate possible using mouse scroll wheel. Right click context menu now uses CPP native implementation. Version upped to 2.2.2

--- a/Src/CLIWrapper/CLIWrapper.vcxproj
+++ b/Src/CLIWrapper/CLIWrapper.vcxproj
@@ -117,12 +117,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CliWrapper.h" />
+    <ClInclude Include="ExplorerContextMenu.h" />
     <ClInclude Include="WicUtility.h" />
     <ClInclude Include="ShellUtility.h" />
     <ClInclude Include="marshal.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CliWrapper.cpp" />
+    <ClCompile Include="ExplorerContextMenu.cpp" />
     <ClCompile Include="WicUtility.cpp" />
     <ClCompile Include="ShellUtility.cpp" />
   </ItemGroup>
