--- a/Src/CLIWrapper/CLIWrapper.vcxproj.filters
+++ b/Src/CLIWrapper/CLIWrapper.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="WicUtility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExplorerContextMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CliWrapper.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WicUtility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ExplorerContextMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
