--- a/Src/FlyPhotos/FlyPhotos.csproj
+++ b/Src/FlyPhotos/FlyPhotos.csproj
@@ -67,6 +67,20 @@
 		<ProjectReference Include="..\CLIWrapper\CLIWrapper.vcxproj" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Reference Include="Magick.NET-Q16-HDRI-OpenMP-x64">
+	    <HintPath>Magick\Magick.NET-Q16-HDRI-OpenMP-x64.dll</HintPath>
+	    <Private>True</Private>
+	  </Reference>
+	  <Reference Include="Magick.NET.Core">
+	    <HintPath>Magick\Magick.NET.Core.dll</HintPath>
+	    <Private>True</Private>
+	  </Reference>
+	  <Reference Include="Magick.NET.SystemDrawing">
+	    <HintPath>Magick\Magick.NET.SystemDrawing.dll</HintPath>
+	    <Private>True</Private>
+	  </Reference>
+	</ItemGroup>
+	<ItemGroup>
 	  <Compile Update="Properties\UserSettings.Designer.cs">
 	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
 	    <AutoGen>True</AutoGen>
@@ -88,6 +102,10 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
+		<None Update="Magick\Magick.Native-Q16-HDRI-OpenMP-x64.dll">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		  <TargetPath>Magick.Native-Q16-HDRI-OpenMP-x64.dll</TargetPath>
+		</None>
 		<None Update="NLog.config">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
