ArrayPools used for speeding up byte arrays.

--- a/Src/FlyPhotos/FlyPhotos.csproj
+++ b/Src/FlyPhotos/FlyPhotos.csproj
@@ -25,6 +25,10 @@
 	</Target>
 
 	<ItemGroup>
+	  <Compile Remove="Controllers\PhotoControllerUnUsed.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Remove="Views\Settings.xaml" />
 	</ItemGroup>
 
