Show thumbnail strip is configurable in settings screen.

--- a/Src/FlyPhotos/App.config
+++ b/Src/FlyPhotos/App.config
@@ -27,6 +27,9 @@
    <setting name="CacheSizeOneSidePreviews" serializeAs="String">
     <value>300</value>
    </setting>
+   <setting name="ShowThumbnails" serializeAs="String">
+    <value>True</value>
+   </setting>
   </FlyPhotos.Properties.UserSettings>
   <FlyPhotos.Properties.FlyPhotos>
 			<setting name="WindowBackground" serializeAs="String">
