--- a/Src/FlyPhotos/Properties/UserSettings.settings
+++ b/Src/FlyPhotos/Properties/UserSettings.settings
@@ -17,5 +17,8 @@
     <Setting Name="CacheSizeOneSidePreviews" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">300</Value>
     </Setting>
+    <Setting Name="ShowThumbnails" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
