Not the thumbnail strip and buttons can fade and it is configurable in settings.

--- a/Src/FlyPhotos/Properties/UserSettings.settings
+++ b/Src/FlyPhotos/Properties/UserSettings.settings
@@ -20,5 +20,11 @@
     <Setting Name="ShowThumbnails" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="AutoFade" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="FadeIntensity" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">60</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
