--- a/Src/FlyPhotos/App.config
+++ b/Src/FlyPhotos/App.config
@@ -30,6 +30,12 @@
    <setting name="ShowThumbnails" serializeAs="String">
     <value>True</value>
    </setting>
+   <setting name="AutoFade" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="FadeIntensity" serializeAs="String">
+    <value>60</value>
+   </setting>
   </FlyPhotos.Properties.UserSettings>
   <FlyPhotos.Properties.FlyPhotos>
 			<setting name="WindowBackground" serializeAs="String">
