*****Zoom for open file and exit.*****

--- a/Src/FlyPhotos/App.config
+++ b/Src/FlyPhotos/App.config
@@ -36,6 +36,9 @@
    <setting name="FadeIntensity" serializeAs="String">
     <value>60</value>
    </setting>
+   <setting name="OpenExitZoom" serializeAs="String">
+    <value>False</value>
+   </setting>
   </FlyPhotos.Properties.UserSettings>
   <FlyPhotos.Properties.FlyPhotos>
 			<setting name="WindowBackground" serializeAs="String">
