--- a/Src/FlyPhotos/Properties/UserSettings.settings
+++ b/Src/FlyPhotos/Properties/UserSettings.settings
@@ -26,5 +26,8 @@
     <Setting Name="FadeIntensity" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">60</Value>
     </Setting>
+    <Setting Name="OpenExitZoom" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
