General Cleanup and speedups. Redid the entire theme and window backdrop thing. Also fixes this bug (App crashes if we change theme after changing to MICA/Acrylic)

--- a/Src/FlyPhotos/App.config
+++ b/Src/FlyPhotos/App.config
@@ -15,7 +15,7 @@
    <setting name="Theme" serializeAs="String">
     <value>Default</value>
    </setting>
-   <setting name="WindowBackGround" serializeAs="String">
+   <setting name="WindowBackGroundType" serializeAs="String">
     <value>Transparent</value>
    </setting>
    <setting name="ResetPanZoomOnNextPhoto" serializeAs="String">
