--- a/Src/FlyPhotos/FlyPhotos.csproj
+++ b/Src/FlyPhotos/FlyPhotos.csproj
@@ -17,6 +17,7 @@
 		<WindowsPackageType>None</WindowsPackageType>
 		<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
 		<ApplicationIcon>Assets\app-icon.ico</ApplicationIcon>
+		<PublishAot>true</PublishAot>
 	</PropertyGroup>
 
 	<Target Name="CopyYourFolderAfterPublish" AfterTargets="Publish">
@@ -44,12 +45,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.2.250402" />
-		<PackageReference Include="LiteDB" Version="5.0.21" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.8" />
 		<PackageReference Include="Microsoft.Graphics.Win2D" Version="1.3.2" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4654" />
-		<PackageReference Include="LibHeif.Native.win-x64" Version="1.15.1" />
-		<PackageReference Include="LibHeifSharp" Version="3.2.0" />
 		<PackageReference Include="PhotoSauce.MagicScaler" Version="0.15.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
 		<PackageReference Include="NLog.Extensions.Logging" Version="6.0.2" />
@@ -57,7 +59,6 @@
 		<PackageReference Include="Svg.Skia" Version="3.0.5" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.8" />
 		<PackageReference Include="System.Drawing.Common" Version="9.0.8" />
-		<PackageReference Include="Vanara.PInvoke.User32" Version="4.1.6" />
 		<PackageReference Include="WinUIEx" Version="2.6.0" />
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
@@ -69,9 +70,6 @@
   -->
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
 		<ProjectCapability Include="Msix" />
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\CLIWrapper\CLIWrapper.vcxproj" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Reference Include="Magick.NET-Q16-HDRI-OpenMP-x64">
@@ -88,13 +86,6 @@
 	  </Reference>
 	</ItemGroup>
 	<ItemGroup>
-	  <Compile Update="Properties\UserSettings.Designer.cs">
-	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
-	    <AutoGen>True</AutoGen>
-	    <DependentUpon>UserSettings.settings</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-	<ItemGroup>
 		<Content Update="Assets\Images\FileNotFound.png">
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
 		</Content>
@@ -109,16 +100,15 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
+		<None Update="appsettings.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="Magick\Magick.Native-Q16-HDRI-OpenMP-x64.dll">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		  <TargetPath>Magick.Native-Q16-HDRI-OpenMP-x64.dll</TargetPath>
 		</None>
 		<None Update="NLog.config">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
-		<None Update="Properties\UserSettings.settings">
-		  <Generator>SettingsSingleFileGenerator</Generator>
-		  <LastGenOutput>UserSettings.Designer.cs</LastGenOutput>
 		</None>
 		<Page Update="Views\Settings.xaml">
 		  <Generator>MSBuild:Compile</Generator>
