--- a/Src/FlyNativeLib/FlyNativeLib.vcxproj.filters
+++ b/Src/FlyNativeLib/FlyNativeLib.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="WicUtility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DllGlobals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
