Option to disable high quality interpolation which can make Pixel art look worse.

--- a/Src/FlyPhotos/appsettings.json
+++ b/Src/FlyPhotos/appsettings.json
@@ -8,6 +8,7 @@
     "ShowThumbnails": true,
     "AutoFade": true,
     "FadeIntensity": 60,
-    "OpenExitZoom": false
+    "OpenExitZoom": false,
+    "HighQualityInterpolation": true
   }
 }
