Now supports Checkered Background for formats supporting transparency

--- a/Src/FlyPhotos/appsettings.json
+++ b/Src/FlyPhotos/appsettings.json
@@ -9,6 +9,7 @@
     "AutoFade": true,
     "FadeIntensity": 60,
     "OpenExitZoom": false,
-    "HighQualityInterpolation": true
+    "HighQualityInterpolation": true,
+    "CheckeredBackground":  false
   }
 }
