Implemented - 1. Suggestion - Control opacity of the transparent background #47 2. Make an option to give padding when photos are displayed first rather than fitting top to bottom or left to right #44

--- a/Src/FlyPhotos/appsettings.json
+++ b/Src/FlyPhotos/appsettings.json
@@ -10,6 +10,8 @@
     "FadeIntensity": 60,
     "OpenExitZoom": false,
     "HighQualityInterpolation": true,
-    "CheckeredBackground":  false
+    "CheckeredBackground": false,
+    "StartupDisplayPercentage": 100,
+    "TransparentBackgroundIntensity": 40
   }
 }
