PathResolve class to capture all Packaged vs Unpackaged folder differences in one place.

--- a/Src/FlyPhotos/NLog.config
+++ b/Src/FlyPhotos/NLog.config
@@ -3,7 +3,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<targets>
-		<target name="file" xsi:type="File" fileName="${tempdir}/FlyPhotos/FlyPhotos.log"
+		<target name="file" xsi:type="File" fileName="${gdc:item=LogPath}/FlyPhotos.log"
 		        archiveNumbering="DateAndSequence" archiveAboveSize="5000000"
 		        layout="${date:format=yyyy-MM-ddTHH\:mm\:ss.fff}|${level}|${callsite}|${message}" />
 	</targets>
