Fixed - 1:1 size by default unless larger than screen size #20

--- a/Src/FlyPhotos/appsettings.json
+++ b/Src/FlyPhotos/appsettings.json
@@ -2,7 +2,7 @@
   "Settings": {
     "Theme": "Default",
     "WindowBackdrop": "Transparent",
-    "ResetPanZoomOnNextPhoto": false,
+    "ResetPanZoomOnNextPhoto": true,
     "CacheSizeOneSideHqImages": 2,
     "CacheSizeOneSidePreviews": 300,
     "ShowThumbnails": true,
@@ -11,7 +11,7 @@
     "OpenExitZoom": false,
     "HighQualityInterpolation": true,
     "CheckeredBackground": false,
-    "StartupDisplayPercentage": 100,
+    "ImageFitPercentage": 100,
     "TransparentBackgroundIntensity": 40
   }
 }
