--- a/Src/FlyNativeLibHeif/FlyNativeLibHeif.vcxproj
+++ b/Src/FlyNativeLibHeif/FlyNativeLibHeif.vcxproj
@@ -90,7 +90,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\heif.lib";"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\libpng16.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\heif.lib";%(AdditionalDependencies)</AdditionalDependencies>
       <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
@@ -108,7 +108,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\heif.lib";"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\libpng16.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\heif.lib";%(AdditionalDependencies)</AdditionalDependencies>
       <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
@@ -125,7 +125,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\heif.lib";"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\libpng16.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\heif.lib";%(AdditionalDependencies)</AdditionalDependencies>
       <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
@@ -144,14 +144,13 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\heif.lib";"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\libpng16.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"C:\Users\Riyas\Documents\GitHub\TestHeif\vcpkg_installed\x64-windows\lib\heif.lib";%(AdditionalDependencies)</AdditionalDependencies>
       <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DllGlobals.h" />
     <ClInclude Include="BGRAEncoder.h" />
-    <ClInclude Include="PngEncoder.h" />
     <ClInclude Include="HeifReader.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="framework.h" />
@@ -160,7 +159,6 @@
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="BGRAEncoder.cpp" />
-    <ClCompile Include="PngEncoder.cpp" />
     <ClCompile Include="HeifReader.cpp" />
     <ClCompile Include="NativeExports.cpp" />
     <ClCompile Include="pch.cpp">
